# abstractNN

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  PUBLISHING.md  README.md  affine_eval.py  create_fmnist_model.py  pyproject.toml  requirements.txt  results.json  setup.py  test_fmnist_model.py  test_soundness.py
.github/workflows/: ci.yml  publish.yml
abstractnn/: __init__.py  affine_engine.py  affine_eval.py  bound_propagator.py  cli.py  onnx_parser.py  partial_evaluator.py  relaxer.py  result_aggregator.py  soundness_checker.py
docs/: .readthedocs.yaml  DOCUMENTATION.md  VGG16_EVALUATION_GUIDE.md  VGG16_TROUBLESHOOTING.md  cli.rst  conf.py  index.rst  overview.rst  quickstart.rst  requirements.txt
docs/api/: abstractnn.rst  affine_engine.rst  bound_propagator.rst  modules.rst
docs/api/_autosummary/: abstractnn.affine_engine.rst  abstractnn.bound_propagator.rst  abstractnn.onnx_parser.rst  abstractnn.partial_evaluator.rst  abstractnn.relaxer.rst  abstractnn.soundness_checker.rst  modules.affine_engine.rst  modules.bound_propagator.rst  modules.onnx_parser.rst  modules.partial_evaluator.rst  modules.relaxer.rst  modules.soundness_checker.rst
examples/: README.md  convert_npy.py  fmnist_cnn.onnx  fmnist_cnn.onnx.data  results.json
models/: README.md
modules/: __init__.py  relaxer.py  report_generator.py
scripts/: run_vgg16_test.sh
tests/: test_affine_engine.py  test_conv_pool.py  test_integration.py  test_relaxer.py  test_vgg16_formal.py
