[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abstractNN"
version = "0.1.4"
description = "Formal verification of neural networks using abstract interpretation and affine arithmetic"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Guillaume Berthelot", email = "contact@flyworthi.ai"}
]
keywords = [
    "neural networks", "formal verification", "abstract interpretation",
    "affine arithmetic", "robustness", "adversarial", "soundness",
    "deep learning", "AI safety"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://flyworthi.ai/abstractNN"
Documentation = "https://abstractnn.readthedocs.io"
Repository = "https://github.com/flyworthyai/abstractNN"
"Bug Tracker" = "https://github.com/flyworthyai/abstractNN/issues"

[project.scripts]
abstractnn-verify = "abstractnn.cli:verify"
abstractnn-eval = "abstractnn.cli:evaluate"
abstractnn-info = "abstractnn.cli:info"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=abstractnn --cov-report=html --cov-report=term"

[tool.coverage.run]
source = ["abstractnn"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
